--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "nodemon": "^3.0.2"
+    "nanoid": "^3.3.7",
+    "nodemon": "^3.0.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
