--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "graphql": "^16.8.1",
+    "graphql-http": "^1.22.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "nanoid": "^3.3.7",
